--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina personal de Max Ortega</title>
+    <title>Max Ortega</title>
 </head>
 
-<body>
-    <h1>Probando Visual Studio Code</h1>
-    <h2>Mi primera webApp</h2>
+<body bgcolor="242424" text="white" style="text-justify:auto;">
+    <center>
+        <h1>Welcome!!!</h1>
+    </center>
+    <center><img src="img\m1.png" height="450px" width="400px" /></center>
+    <center>
+        <h2>Hola soy Max Ortega, puedes llamarme Tibox, soy un estudiante de la Universidad Nacional de Cajamarca que un día espera hacer algo que impresione a su mamá.</h2>
+    </center>
     <h3>Max Ortega Requelme</h3>
+    <a href="contact.html">Contact Us</a>
     <h4>v 1.0</h4>
 </body>
 
