--- a/index.html
+++ b/index.html
@@ -9,15 +9,67 @@
 
 <body bgcolor="242424" text="white" style="text-justify:auto;">
     <center>
-        <h1>Welcome!!!</h1>
+        <h1>
+            <font color="FFB100" face="Impact">Bienvenido!!!</font>
+        </h1>
     </center>
-    <center><img src="img\m1.png" height="450px" width="400px" /></center>
     <center>
-        <h2>Hola soy Max Ortega, puedes llamarme Tibox, soy un estudiante de la Universidad Nacional de Cajamarca que un día espera hacer algo que impresione a su mamá.</h2>
+        <table>
+            <tr>
+                <td>
+                    <a href="index.html"><img src="img\1.png" height="30px" width="80px"></a>
+                </td>
+                <td>
+                    <a href="about.html"><img src="img\2.png" height="30px" width="80px"></a>
+                </td>
+                <td>
+                    <a href="service.html"><img src="img\3.png" height="30px" width="80px"></a>
+                </td>
+                <td>
+                    <a href="contact.html"><img src="img\4.png" height="30px" width="80px"></a>
+                </td>
+            </tr>
+        </table>
     </center>
-    <h3>Max Ortega Requelme</h3>
-    <a href="contact.html">Contact Us</a>
-    <h4>v 1.0</h4>
+
+    <center><img src="img\m1.jpg" height="450px" width="625px" /></center>
+    <center>
+        <table border="1" width="40%" bgcolor="0000">
+            <tr>
+                <td colspan="2">
+                    <center>
+                        <h2>¿Ingenieria web?</h2>
+                    </center>
+                </td>
+
+            </tr>
+            <tr>
+                <td>
+                    <h3>
+                        <center>
+                            <font face="Arial Narrow" size="3">
+                                <p>Hola soy Max Ortega, puedes llamarme Tibox, estudiante del curso de ingenieria web de la Universidad Nacional de Cajamarca, esta pagina web es parte del desarrollo del curso de IW el cual espero aprobar con satisfacción.</p>
+                                <p> La ingeniería web es la aplicación de metodologías sistemáticas, disciplinadas y cuantificables al desarrollo eficiente, operación y evolución de aplicaciones de alta calidad en la World Wide Web.​</p>
+                            </font>
+                        </center>
+                    </h3>
+                </td>
+                <td><img src="img\iw.jpg" height="200px" width="200px">
+                    <center><a href="https://micarrerauniversitaria.com/c-ingenieria/ingenieria-web/" target="_blank">ingenieria web</a></center>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <a href="index.html">Inicio</a> -
+                <a href="about.html">Nosotros</a> -
+                <a href="service.html">Servicios</a> -
+                <a href="contact.html">Contacto</a> <br> Copyright 2020 Mandame un mesaje via email a
+                <a href="mortegar15_2@unc.edu.pe">mortegar15_2@unc.edu.pe</a>
+            </tr>
+        </table>
+    </center>
+
 </body>
 
 </html>
