--- a/about.html
+++ b/about.html
@@ -5,92 +5,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Ortega</title>
+    <link href="css/estilopersonal.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
-<body bgcolor="242424" text="white">
-    <center>
-        <h1>
-            <font color="FFB100" face="Impact">Nosotros</font>
-        </h1>
-    </center>
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fas fa-bars"></i>
+                </label>
+                <label class="logo"><img src="img\logo.png" alt="" width="150"/></label>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a class="active" href="about.html">Nosotros</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <center>
-        <table>
-            <tr>
-                <td>
-                    <a href="index.html"><img src="img\1.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="about.html"><img src="img\2.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="service.html"><img src="img\3.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="contact.html"><img src="img\4.png" height="30px" width="80px"></a>
-                </td>
-            </tr>
-        </table>
-    </center>
+    <main class="main">
+        <video class="center" controls>
+            <source src="video\isla.mp4" type="video/mp4"/>
+        </video>
 
-    <center>
-        <table border="1" width="50%">
-            <tr>
-                <td>
-                    <center><img src="img\m7.jpg" height="250px" width="330px" /></center>
-                </td>
-                <td>
-                    <h3>
-                        <center>Estudios</center>
-                    </h3>
-                    <h4>
-                        <center>Actualmente estudion en el noveno ciclo de ingenieria de sistemas en la Universidad Nacional de Cajamarca, soy natural de Cajamarca con domicilio en avenida Ventanillas de Otuzco distrito de los Baños del Inca. Realice estudios
-                            primarios en la escuela publica 82012 y estudios secundarios en el colegio Nacional San Ramon. </center>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <center><img src="img\m8.jpg" height="250px" width="330px" /></center>
-                </td>
-                <td>
-                    <h3>
-                        <center>Experiencia laboral</center>
-                    </h3>
-                    <h4>
-                        <center>2013: Bembos SAC<br> 2014:Grupo Cencosud SAC<br> 2015:Servicio de cobramza en inversones SCI grupo Scotiabank<br> 2017:Docente de razonamiento matematico en el colegio privado Jorge Vidal Ascencio<br> 2019:Operador informatico
-                            ONPE
-                        </center>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <center><img src="img\m10.jpg" height="250px" width="330px" /></center>
-                </td>
-                <td>
-                    <h3>
-                        <center>Datos curiosos</center>
-                    </h3>
-                    <h4>
-                        <center>Mis series favoritas son Suits, Juego de tronos, The Mandalorean.<br>Peliculas favoritas: la saga del señor de los anillos, <br> la saga de el Hobbit, Ready Player One y Volver al futuro, <br> pasatiempos, salir a caminar al campo,
-                            salir con amigos,<br> practicar programas de procesamiento de imagen y video entre otros. </center>
-                    </h4>
-                </td>
-            </tr>
-        </table>
+        <div class="container">
+            <br>
+            <h1>Galeria de imagenes</h1>
+            <span class="linea"></span>
+            <section class="galeria">
+                <a href="#image1"><img src="img\g1.png" alt="" width="300px" height="180px"></a>
+                <a href="#image2"><img src="img\g2.png" alt="" width="300px" height="180px"></a>
+                <a href="#image3"><img src="img\g3.png" alt="" width="300px" height="180px"></a>
+                <a href="#image4"><img src="img\g4.jpg" alt="" width="300px" height="180px"></a>
+                <a href="#image5"><img src="img\g5.jpg" alt="" width="300px" height="180px"></a>
+                <a href="#image6"><img src="img\g6.jpg" alt="" width="300px" height="180px"></a>
+            </section>
 
-        <table>
-            <tr>
-                <a href="index.html">Inicio</a> -
-                <a href="about.html">Nosotros</a> -
-                <a href="service.html">Servicios</a> -
-                <a href="contact.html">Contacto</a> <br> Copyright 2020 Mandame un mesaje via email a
-                <a href="mortegar15_2@unc.edu.pe">mortegar15_2@unc.edu.pe</a>
-            </tr>
-        </table>
-    </center>
+            <article class="light-box" id="image1">
+                <a href="#image6" class="next"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                <img src="img\g1.png" alt="" width="60%">
+                <a href="#image2" class="next"><i class="fas fa-arrow-alt-circle-right"></i></a>
+                <a href="#" class="close">x</a>
+            </article>
 
+            <article class="light-box" id="image2">
+                <a href="#image1" class="next"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                <img src="img\g2.png" alt="" width="60%">
+                <a href="#image3" class="next"><i class="fas fa-arrow-alt-circle-right"></i></a>
+                <a href="#" class="close">x</a>
+            </article>
+
+            <article class="light-box" id="image3">
+                <a href="#image2" class="next"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                <img src="img\g3.png" alt="" width="60%">
+                <a href="#image4" class="next"><i class="fas fa-arrow-alt-circle-right"></i></a>
+                <a href="#" class="close">x</a>
+            </article>
+
+            <article class="light-box" id="image4">
+                <a href="#image3" class="next"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                <img src="img\g4.jpg" alt="" width="60%">
+                <a href="#image5" class="next"><i class="fas fa-arrow-alt-circle-right"></i></a>
+                <a href="#" class="close">x</a>
+            </article>
+
+            <article class="light-box" id="image5">
+                <a href="#image4" class="next"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                <img src="img\g5.jpg" alt="" width="60%">
+                <a href="#image6" class="next"><i class="fas fa-arrow-alt-circle-right"></i></a>
+                <a href="#" class="close">x</a>
+            </article>
+
+            <article class="light-box" id="image6">
+                <a href="#image5" class="next"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                <img src="img\g6.jpg" alt="" width="60%">
+                <a href="#image1" class="next"><i class="fas fa-arrow-alt-circle-right"></i></a>
+                <a href="#" class="close">x</a>
+            </article>
+
+            <br>
+            <p>
+                Para el optimista, el vaso está medio lleno. Para el pesimista, el vaso está medio vacío. Para el ingeniero, el vaso es el doble de grande de lo que debería ser. Te comparto algunas fotos :)
+            </p>
+
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <center>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="https://www.instagram.com/maxortegar" target="_blank"><img src="img\igm.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://web.facebook.com/MaxOrtegar" target="_blank"><img src="img\fb.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://twitter.com/MaxOrtegaR" target="_blank"><img src="img\tw.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://web.whatsapp.com" target="_blank"><img src="img\wp.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+            <p>Designed by @MaxOrtega</p>
+        </div>
+    </footer>
 
 </body>
 
