--- a/contact.html
+++ b/contact.html
@@ -5,83 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Ortega</title>
+    <link href="css/estilopersonal.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
-<body bgcolor="242424" text="white">
-    <center>
-        <h1>
-            <font color="FFB100" face="Impact">Contacto</font>
-        </h1>
-    </center>
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fas fa-bars"></i>
+                </label>
+                <label class="logo"><img src="img\logo.png" alt="" width="150"/></label>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="about.html">Nosotros</a></li>
+                    <li><a class="active" href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <center>
-        <table>
-            <tr>
-                <td>
-                    <a href="index.html"><img src="img\1.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="about.html"><img src="img\2.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="service.html"><img src="img\3.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="contact.html"><img src="img\4.png" height="30px" width="80px"></a>
-                </td>
-            </tr>
-        </table>
-    </center>
+    <main class="main">
+        <section class="form-register">
+            <h4>Mandame un correo</h4>
+            <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su nombre">
+            <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese sus apellidos">
+            <input class="controls" type="text" name="correo" id="correo" placeholder="Ingrese su correo">
+            <input class="controls" type="text" name="telefono" id="telefono" placeholder="Ingrese su telefono">
+            <h5>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></h5>
+            <input class="botons" type="submit" value="Registrar">
+        </section>
 
-    <center>
-        <table border="1">
-            <tr>
-                <td>
-                    <img src="img\fb.png" height="30px" width="30px">
-                </td>
-                <td>
-                    <a href="https://web.facebook.com/MaxOrtegar?_rdc=1&_rdr" target="_blank">web.facebook.com/MaxOrtegar</a>
-                </td>
-            </tr>
+        <div class="container">
 
-            <tr>
-                <td>
-                    <img src="img\ig.png" height="30px" width="30px">
-                </td>
-                <td>
-                    <a href="https://www.instagram.com/maxortegar/?fbclid=IwAR2SQ0Jd0gxdYXGwGNP_Ra9i6CfsHG9KFZCwaLBUh7keJ2UVXRGhmfyBwtI" target="_blank">web.instagram.com/MaxOrtegar</a>
-                </td>
-            </tr>
+        </div>
+    </main>
 
-            <tr>
-                <td>
-                    <img src="img\wp.png" height="30px" width="30px">
-                </td>
-                <td>
-                    910955348/976485863
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="img\co.png" height="30px" width="30px">
-                </td>
-                <td>
-                    <a href="mortegar15_2@unc.edu.pe">mortegar15_2@unc.edu.pe</a>
-                </td>
+    <footer class="footer">
+        <div class="container">
+            <center>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="https://www.instagram.com/maxortegar" target="_blank"><img src="img\igm.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://web.facebook.com/MaxOrtegar" target="_blank"><img src="img\fb.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://twitter.com/MaxOrtegaR" target="_blank"><img src="img\tw.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://web.whatsapp.com" target="_blank"><img src="img\wp.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+            <p>Designed by @MaxOrtega</p>
+        </div>
+    </footer>
 
-            </tr>
-        </table>
-
-        <table>
-            <tr>
-                <a href="index.html">Inicio</a> -
-                <a href="about.html">Nosotros</a> -
-                <a href="service.html">Servicios</a> -
-                <a href="contact.html">Contacto</a> <br> Copyright 2020 Mandame un mesaje via email a
-                <a href="mortegar15_2@unc.edu.pe">mortegar15_2@unc.edu.pe</a>
-            </tr>
-        </table>
-    </center>
 </body>
 
 </html>
