--- a/index.html
+++ b/index.html
@@ -5,70 +5,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Max Ortega</title>
+    <link href="css/estilopersonal.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
 </head>
 
-<body bgcolor="242424" text="white" style="text-justify:auto;">
-    <center>
-        <h1>
-            <font color="FFB100" face="Impact">Bienvenido!!!</font>
-        </h1>
-    </center>
-    <center>
-        <table>
-            <tr>
-                <td>
-                    <a href="index.html"><img src="img\1.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="about.html"><img src="img\2.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="service.html"><img src="img\3.png" height="30px" width="80px"></a>
-                </td>
-                <td>
-                    <a href="contact.html"><img src="img\4.png" height="30px" width="80px"></a>
-                </td>
-            </tr>
-        </table>
-    </center>
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="navigation">
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fas fa-bars"></i>
+                </label>
+                <label class="logo"><img src="img\logo.png" alt="" width="150"/></label>
+                <ul>
+                    <li><a class="active" href="index.html">Inicio</a></li>
+                    <li><a href="about.html">Nosotros</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <center><img src="img\m1.jpg" height="450px" width="625px" /></center>
-    <center>
-        <table border="1" width="40%" bgcolor="0000">
-            <tr>
-                <td colspan="2">
-                    <center>
-                        <h2>¿Ingenieria web?</h2>
-                    </center>
-                </td>
+    <main class="main">
+        <div class="c-img">
+            <h1>BIENVENIDO A MI PAGINA WEB</h1>
+            <img src="img\max1.png" alt="" width="100%">
+            <br>
+            <br>
+            <h2>Max Ortega</h2>
+            <div class="txt">
+                <p>Cuando seas viejo deseo que no tengas que mirar hacia atrás en tu vida y decir “¿Cómo sería si…? ¿Por qué no hice…?”.Aqui sito una de mis frases favoritas, un mesaje de la pelicula "The Founder":</p>
+                <br>
+                <p>"Ahora, sé lo que estás pensando... ¿Cómo diablos un hombre de 52 años, maduro, vendedor de máquinas batidoras de malteadas, construyó un imperio de comida rápida con 1.600 restaurantes, en cincuenta estados, cinco países en el extranjero,
+                    con un ingreso anual, sólo en el país, de $700 millones? Una palabra: ¡Persistencia! ¡Nada en el mundo puede reemplazar a la persistencia! El talento, no: nada es más común que un hombre no exitoso con talento. La genialidad, no: genios
+                    sin recompensa son prácticamente algo común. La educación, no: el mundo está lleno de tontos con educación. La persistencia y la determinación por sí solas, son poderosas. "
+                </p>
 
-            </tr>
-            <tr>
-                <td>
-                    <h3>
-                        <center>
-                            <font face="Arial Narrow" size="3">
-                                <p>Hola soy Max Ortega, puedes llamarme Tibox, estudiante del curso de ingenieria web de la Universidad Nacional de Cajamarca, esta pagina web es parte del desarrollo del curso de IW el cual espero aprobar con satisfacción.</p>
-                                <p> La ingeniería web es la aplicación de metodologías sistemáticas, disciplinadas y cuantificables al desarrollo eficiente, operación y evolución de aplicaciones de alta calidad en la World Wide Web.​</p>
-                            </font>
-                        </center>
-                    </h3>
-                </td>
-                <td><img src="img\iw.jpg" height="200px" width="200px">
-                    <center><a href="https://micarrerauniversitaria.com/c-ingenieria/ingenieria-web/" target="_blank">ingenieria web</a></center>
-                </td>
-            </tr>
-        </table>
-        <table>
-            <tr>
-                <a href="index.html">Inicio</a> -
-                <a href="about.html">Nosotros</a> -
-                <a href="service.html">Servicios</a> -
-                <a href="contact.html">Contacto</a> <br> Copyright 2020 Mandame un mesaje via email a
-                <a href="mortegar15_2@unc.edu.pe">mortegar15_2@unc.edu.pe</a>
-            </tr>
-        </table>
-    </center>
+            </div>
+        </div>
+    </main>
+
+
+
+    <footer class="footer">
+        <div class="container">
+            <center>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="https://www.instagram.com/maxortegar" target="_blank"><img src="img\igm.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://web.facebook.com/MaxOrtegar" target="_blank"><img src="img\fb.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://twitter.com/MaxOrtegaR" target="_blank"><img src="img\tw.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                        <td>
+                            <a href="https://web.whatsapp.com" target="_blank"><img src="img\wp.png" alt="" width="40px" height="40px"></a>
+                        </td>
+                    </tr>
+                </table>
+            </center>
+            <p>Designed by @MaxOrtega</p>
+        </div>
+    </footer>
 
 </body>
 
