--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/estilopersonal.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
 </head>
 
 <body>
