--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <title>Max Ortega</title>
     <link href="css/estilopersonal.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/icomoon/style.css">
 </head>
 
 <body>
@@ -19,9 +21,10 @@
                 </label>
                 <label class="logo"><img src="img\logo.png" alt="" width="150"/></label>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a class="active" href="about.html">Nosotros</a></li>
-                    <li><a href="contact.html">Contacto</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a class="active" href="about.html">ABOUT</a></li>
+                    <li><a href="contact.html">CONTAC</a></li>
+                    <li><a href="carta.html">CARTA</a></li>
                 </ul>
             </nav>
         </div>
@@ -101,16 +104,16 @@
                 <table>
                     <tr>
                         <td>
-                            <a href="https://www.instagram.com/maxortegar" target="_blank"><img src="img\igm.png" alt="" width="40px" height="40px"></a>
+                            <a href="https://www.instagram.com/maxortegar" target="_blank"><img src="https://img.icons8.com/nolan/64/instagram-new.png" /></a>
                         </td>
                         <td>
-                            <a href="https://web.facebook.com/MaxOrtegar" target="_blank"><img src="img\fb.png" alt="" width="40px" height="40px"></a>
+                            <a href="https://web.facebook.com/MaxOrtegar" target="_blank"><img src="https://img.icons8.com/nolan/64/facebook-new.png" /></a>
                         </td>
                         <td>
-                            <a href="https://twitter.com/MaxOrtegaR" target="_blank"><img src="img\tw.png" alt="" width="40px" height="40px"></a>
+                            <a href="https://twitter.com/MaxOrtegaR" target="_blank"><img src="https://img.icons8.com/nolan/64/twitter.png" /></a>
                         </td>
                         <td>
-                            <a href="https://web.whatsapp.com" target="_blank"><img src="img\wp.png" alt="" width="40px" height="40px"></a>
+                            <a href="https://web.whatsapp.com" target="_blank"><img src="https://img.icons8.com/nolan/64/pinterest.png" /></a>
                         </td>
                     </tr>
                 </table>
