--- a/carta.html
+++ b/carta.html
@@ -83,11 +83,16 @@
                 Canada. Later on however it was discovered that they were just moving like this<br> because they were really cold.
             </dd>
             <br>
-            <br> For more of my research, see my
+        </p>
+    </div>
+
+    <div id=correodos>
+        <correodos>
+            For more of my research, see my
             <a href="#">exotic dance research page</a>.
             <br>
             <br> Yours sincerely.
-        </p>
+        </correodos>
     </div>
 
     <div id="remitente">
