--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a class="active" href="contact.html">CONTAC</a></li>
-                    <li><a href="carta.html">CARTA</a></li>
+                    <li><a href="carta05.html">CARTA</a></li>
                 </ul>
             </nav>
         </div>
