--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
                     <i class="fas fa-bars"></i>
                 </label>
                 <label class="logo"><img src="img\logo.png" alt="" width="150"/></label>
-                <ul>
+                <ul class="menu">
                     <li><a class="active" href="index.html">HOME</a></li>
+                    <ul class="submenu">
+                        <li><a href="carta05.html">CARTA</a> </li>
+                        <li><a href="#">SERVICIO 01</a> </li>
+                        <li><a href="#">SERVICIO 02</a> </li>
+                    </ul>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTAC</a></li>
-                    <li><a href="carta.html">CARTA</a></li>
+                    <li><a href="carta05.html">CARTA</a></li>
                 </ul>
             </nav>
         </div>
