--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a class="active" href="about.html">ABOUT</a></li>
                     <li><a href="contact.html">CONTAC</a></li>
-                    <li><a href="carta.html">CARTA</a></li>
+                    <li><a href="carta05.html">CARTA</a></li>
                 </ul>
             </nav>
         </div>
