--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a class="active" href="index.html">HOME</a></li>
                     <ul class="submenu">
                         <li><a href="carta05.html">CARTA</a> </li>
-                        <li><a href="#">SERVICIO 01</a> </li>
+                        <li><a href="#">GORDY 01</a> </li>
                         <li><a href="#">SERVICIO 02</a> </li>
                     </ul>
                     <li><a href="about.html">ABOUT</a></li>
