--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </tr>
                 </table>
             </center>
-            <p>Designed by @MaxOrtega</p>
+            <p>Designed by tibox</p>
         </div>
     </footer>
 
