--- a/contact.html
+++ b/contact.html
@@ -3,71 +3,121 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Max Ortega</title>
-    <link href="css/estilopersonal.css" rel="stylesheet" type="text/css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="css/estilo.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </head>
 
 <body>
-    <header class="header">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <nav class="navigation">
-                <input type="checkbox" id="check">
-                <label for="check" class="checkbtn">
-                    <i class="fas fa-bars"></i>
-                </label>
-                <label class="logo"><img src="img\logo.png" alt="" width="150"/></label>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a class="active" href="contact.html">CONTAC</a></li>
-                    <li><a href="carta05.html">CARTA</a></li>
+            <a class="navbar-brand" href="#"><img src="img/logo1.png" class="logo-max" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <ion-icon name="menu-outline"></ion-icon>
+        </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contacto</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Tareas
+              </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="carta05.html">carta</a>
+                        </div>
+                    </li>
                 </ul>
-            </nav>
+            </div>
         </div>
-    </header>
+    </nav>
 
-    <main class="main">
-        <section class="form-register">
-            <h4>Mandame un correo</h4>
-            <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su nombre">
-            <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese sus apellidos">
-            <input class="controls" type="text" name="correo" id="correo" placeholder="Ingrese su correo">
-            <input class="controls" type="text" name="telefono" id="telefono" placeholder="Ingrese su telefono">
-            <h5>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></h5>
-            <input class="botons" type="submit" value="Registrar">
-        </section>
 
+    <section id="contacto">
+        <main class="main">
+            <section class="form-register">
+                <h4>Mandame un correo</h4>
+                <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su nombre">
+                <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese sus apellidos">
+                <input class="controls" type="text" name="correo" id="correo" placeholder="Ingrese su correo">
+                <input class="controls" type="text" name="telefono" id="telefono" placeholder="Ingrese su telefono">
+                <h5>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></h5>
+                <input class="botons" type="submit" value="Registrar">
+            </section>
+            <div class="container">
+            </div>
+        </main>
+    </section>
+
+    <section id="footer" class="bg-darkfotter">
         <div class="container">
+            <img src="img/logo2.png" class="logo-max" alt="logo">
+            <ul class="list-inline">
+                <li class="list-inline-item footer-menu"><a href="index.html">Inicio</a></li>
+                <li class="list-inline-item footer-menu"><a href="about.html">Nosotros</a></li>
+                <li class="list-inline-item footer-menu"><a href="contact.html">Contacto</a></li>
+            </ul>
 
+            <ul class="list-inline">
+                <li class="list-inline-item">
+                    <a href="#">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">
+                        <ion-icon name="logo-twitter"></ion-icon>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">
+                        <ion-icon name="logo-youtube"></ion-icon>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">
+                        <ion-icon name="logo-pinterest"></ion-icon>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">
+                        <ion-icon name="logo-facebook"></ion-icon>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">
+                        <ion-icon name="logo-tumblr"></ion-icon>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#">
+                        <ion-icon name="logo-dribbble"></ion-icon>
+                    </a>
+                </li>
+            </ul>
+            <small>MR.TIBOX 2020 Copyright © Todos los derechos reservados - Política de privacidad - Contact us / Contacta con nosotros</small>
         </div>
-    </main>
+    </section>
 
-    <footer class="footer">
-        <div class="container">
-            <center>
-                <table>
-                    <tr>
-                        <td>
-                            <a href="https://www.instagram.com/maxortegar" target="_blank"><img src="https://img.icons8.com/nolan/64/instagram-new.png" /></a>
-                        </td>
-                        <td>
-                            <a href="https://web.facebook.com/MaxOrtegar" target="_blank"><img src="https://img.icons8.com/nolan/64/facebook-new.png" /></a>
-                        </td>
-                        <td>
-                            <a href="https://twitter.com/MaxOrtegaR" target="_blank"><img src="https://img.icons8.com/nolan/64/twitter.png" /></a>
-                        </td>
-                        <td>
-                            <a href="https://web.whatsapp.com" target="_blank"><img src="https://img.icons8.com/nolan/64/pinterest.png" /></a>
-                        </td>
-                    </tr>
-                </table>
-            </center>
-            <p>Designed by @MaxOrtega</p>
-        </div>
-    </footer>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 
 </body>
 
