--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Nosotros</a>
+                        <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contacto</a>
@@ -35,8 +35,8 @@
                 Tareas
               </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="carta05.html">carta</a>
+                            <a class="dropdown-item" href="carta05.html">Carta</a>
+                            <a class="dropdown-item" href="lab07.html">Laboratorio 07</a>
                         </div>
                     </li>
                 </ul>
