--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#testimonios">Testimonios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">Nosotros</a>
+                        <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contacto</a>
@@ -45,8 +45,8 @@
                 Tareas
               </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="carta05.html">carta</a>
+                            <a class="dropdown-item" href="carta05.html">Carta</a>
+                            <a class="dropdown-item" href="lab07.html">Laboratorio 07</a>
                         </div>
                     </li>
                 </ul>
