--- a/index.html
+++ b/index.html
@@ -29,16 +29,19 @@
                         <a class="nav-link" href="#portafolio">Portafolio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#abouts">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#pricing">Planes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#testimonios">Testimonios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="galeria.html">Galeria</a>
+                        <a class="nav-link" href="contact.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contacto</a>
+                        <a class="nav-link" href="galeria.html">Galeria</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
