--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,8 @@
             <img src="img/logo2.png" class="logo-max" alt="logo">
             <ul class="list-inline">
                 <li class="list-inline-item footer-menu"><a href="index.html">Inicio</a></li>
-                <li class="list-inline-item footer-menu"><a href="about.html">Nosotros</a></li>
                 <li class="list-inline-item footer-menu"><a href="contact.html">Contacto</a></li>
+                <li class="list-inline-item footer-menu"><a href="galeria.html">Galeria</a></li>
             </ul>
 
             <ul class="list-inline">
