--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
                 <li class="list-inline-item footer-menu"><a href="#pricing">Planes</a></li>
                 <li class="list-inline-item footer-menu"><a href="#testimonios">Testimonio</a></li>
                 <li class="list-inline-item footer-menu"><a href="contact.html">Contacto</a></li>
+                <li class="list-inline-item footer-menu"><a href="galeria.html">Galeria</a></li>
             </ul>
 
             <ul class="list-inline">
