--- a/lab07.html
+++ b/lab07.html
@@ -21,12 +21,12 @@
                     <tr>
                         <td id="text1" class="azul">Apellidos y nombres: </td>
                         <td><input class="llenado" type="text" name="txtNombres" id="txtNombres" size="30" placeholder="Ingrese apellidos y nombres"></td>
-                        <td><button type="button" onclick="funcionExtraer()" class="boton am">Extraer</button></td>
+                        <td><button type="button" id="btnExtraer" class="boton am">Extraer</button><button type="button" id="btnCambiarColor" class="boton ro">Colorear</button></td>
                     </tr>
                     <tr>
                         <td id="text2" class="azul">Fecha de nacimiento: </td>
                         <td><input class="llenado" type="text" name="txtFecha" id="txtFecha" size="30" placeholder="Ingrese fecha de nacimiento"></td>
-                        <td><button type="button" onclick="limpiar()" class="boton az">Limpiar</button></td>
+                        <td><button type="button" id="btnLimpiar" class="boton az">Limpiar</button></td>
                     </tr>
                 </table>
                 <table class="tabla">
