--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="css/estilo.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 
 </head>
@@ -62,8 +63,11 @@
             <div class="content-center">
                 <h1>Diseño & Desarrollo de Sitios Web</h1>
                 <p>El diseño web es un área enfocada en el desarrollo de interfaces digitales, como el diseño de sitios y aplicaciones para web. Para ello, los diseñadores web crean las páginas utilizando lenguajes de marcado como HTML.</p>
-                <a href="#" class="btn btn-light topmargin-sm">Explorar ahora <ion-icon name="arrow-redo-circle-outline"></ion-icon></a>
+                <button class="btn-gradi topmargin-sm">Explora ahora <ion-icon name="arrow-redo-circle-outline"></ion-icon></button>
+                <a href="#" class="link-gradient topmargin-sm">Max Ortega</a>
+
             </div>
+
         </div>
     </section>
 
