--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="carta05.html">Carta</a>
                             <a class="dropdown-item" href="lab07.html">Laboratorio 07</a>
+                            <a class="dropdown-item" href="ortega.html">Practica noviembre</a>
                         </div>
                     </li>
                 </ul>
