--- a/ortega.html
+++ b/ortega.html
@@ -4,11 +4,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <link href="practicanoviembre/css/ortega.css" rel="stylesheet">
+    <title>Practica noviembre</title>
 </head>
 
 <body>
+    <section id="articulos">
+        <div class="container">
+            <div class="row">
 
+
+                <div class="col-md-3">
+                    <div class="member-container">
+                        <div class="member-details">
+                            <h6>Desde Sectores y Empresas</h6>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <button class="button topmargin-xs">Inmobiliario</button>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <ion-icon name="bookmark-outline"></ion-icon>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="practicanoviembre/img/inmobiliario.jpg" class="img-fluid" alt="member 1">
+                        <h5 class="topmargin-sm">Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
+                        <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
+                        <p class="topmargin-lg">
+                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="member-container">
+                        <div class="member-details">
+                            <h6>Desde Management </h6>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <button class="button topmargin-xs">Talento y cultura</button>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <ion-icon name="bookmark-outline"></ion-icon>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="practicanoviembre/img/talento y cultura.jpg" class="img-fluid" alt="member 2">
+                        <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
+                        <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
+                        <p class="topmargin-lg">
+                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="member-container">
+                        <div class="member-details">
+                            <h6>Desde Legal y politica </h6>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <button class="button topmargin-xs">Politica</button>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <ion-icon name="bookmark-outline"></ion-icon>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="practicanoviembre/img/politica.jpg" class="img-fluid" alt="member 3">
+                        <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
+                        <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
+                        <p class="topmargin-lg">
+                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                    </div>
+                </div>
+
+
+                <div class="col-md-3">
+                    <div class="member-container">
+                        <div class="member-details">
+                            <h6>Desde Sectores y Empresas </h6>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <button class="button topmargin-xs">Turismo</button>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <ion-icon name="bookmark-outline"></ion-icon>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="practicanoviembre/img/turismo.jpg" class="img-fluid" alt="member 3">
+                        <h5>Vivienda residual:<br>avanzan las ventas, pero<br>todavia no el precio.</h5>
+                        <p>El segmento da sus primeras<br>señales de recuperación, aunque el<br>valor del metro cuadrado en Lima<br>Top seguira bajo por algunos<br>mesea más. </p>
+                        <p class="topmargin-lg">
+                            <ion-icon name="timer-outline"></ion-icon> Lectura de 3 min</p>
+                    </div>
+
+
+
+                </div>
+            </div>
+    </section>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
 </html>
